# simplejson

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  main.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  testCI.yml  ubuntu_build.yml  windows_build.yml
examples/: 02_basic_encode.ring  03_nested_structures.ring  04_json_patch.ring  05_merge_patch.ring  06_binary_formats.ring  07_ndjson.ring  08_validation_and_info.ring  09_formatting.ring  10_object_manipulation.ring  11_path_queries.ring  12_file_io.ring  13_base64.ring  14_json_comments.ring  15_csv_conversion.ring  16_toml_conversion.ring  17_json_booleans.ring  example1.ring  example2.ring
lib/macos/amd64/: libring_simplejson.dylib
lib/macos/arm64/: libring_simplejson.dylib
src/: ring_simplejson.c  ring_simplejson.cpp
src/utils/: color.ring  install.ring  uninstall.ring
tests/: simplejson_test.ring
